# graphics_programming

./: .gitignore  README.md
graphics_programming/: main.cpp
graphics_programming/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
graphics_programming/dependencies/include/: camera.h  shader.h
graphics_programming/dependencies/include/glad/: glad.h
graphics_programming/src/: camera.cpp  fragment.shader  glad.c  main.cpp  shader.cpp  vertex.shader
